wxwidgets inferface truncates the "position / length" display
The field to display the postion / length is too small with the wxWidgets interface.
For example I can only see "0:00:01 / 1:" when I should see "0:00:01 / 1:13:03".
The same problem exists for the speed field. I see "x1.0" instead of "x1.00"
I attached two screen captures. One with the problem and one with the problem corrected.
I propose the simple patch:
--- vlc-0.8.6.a.debian/modules/gui/wxwidgets/interface.cpp 2007-01-03 19:27:56.000000000 +0100
+++ vlc-0.8.6.a.debian.new/modules/gui/wxwidgets/interface.cpp 2007-03-18 16:41:52.000000000 +0100
@@ -418,7 +418,7 @@
/* Creation of the status bar
* Helptext for menu items and toolbar tools will automatically get
* displayed here. */
- int i_status_width[3] = {100, 40, -1};
+ int i_status_width[3] = {150, 55, -1};
statusbar = CreateStatusBar( 3 ); /* 2 fields */ statusbar->SetStatusWidths( 3, i_status_width );
statusbar->SetStatusText( wxString::Format(wxT("x%.2f"), 1.0), 1 );
The best solution would be to calculate the field length depending on the font size but that is too much work for me.