Wx - Increase the time display. Close #1116. Does not happen in Qt4.